--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,14 @@
       <version>4.5.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.4</version>
+    </dependency>
   </dependencies>
 
+  <!--All configuration to create an uber jar to deploy to Amazon -->
   <build>
     <plugins>
       <plugin>
